--- a/styles-library/typography.scss
+++ b/styles-library/typography.scss
@@ -1,8 +1,7 @@
-
-// base Tieto font styles
-/////////////////////////
+// Tieto base fonts
+//
 // Font styles from this style guide: https://company-81847.frontify.com/d/VHfNy7brWRvI/tieto-style-guide#/introduction/overview
-/////////////////////////
+
 
 @import url('//fonts.googleapis.com/css?family=Open+Sans:300,300i,400,600,700');
 
